1. pequenas alteracoes no layout, 2.insercao do subtitulo na renderizacao de pagina

--- a/public/index.html
+++ b/public/index.html
@@ -32,11 +32,10 @@
     <header>
       <div class="navbar navbar-dark bg-dark box-shadow">
         <div class="container d-flex justify-content-between">
-          <a href="#" class="navbar-brand d-flex align-items-center">
+          <a href="/" class="navbar-brand d-flex align-items-center">
             <i class="fab fa-github fa-lg mr-2"></i>
             <strong>GitHub Portfolio</strong>
           </a>
-          <i class="fas fa-heart fa-lg"></i>
           <i class="fas fa-user fa-lg"></i>
         </div>
       </div>
@@ -45,16 +44,13 @@
       <section class="jumbotron text-center">
         <div class="container">
           <h1 class="jumbotron-heading">Reactjs</h1>
-          <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
+          <p class="lead text-muted">Bio</p>
           <p>
-            <a href="#" class="btn btn-primary my-2">Main call to action</a>
-            <a href="#" class="btn btn-secondary my-2">Secondary action</a>
+            <a href="/" class="btn btn-secondary my-2">See Repositories</a>
           </p>
         </div>
       </section>
-      <div class="container">
-        <div id="root" class="card-deck mb-3 text-center"></div>
-      </div>
+      <section id="root"></section>
     </main>
     <footer class="text-muted">
       <div class="container">
@@ -66,7 +62,6 @@
     </footer>  
     <!--   jQuery -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <!-- <script src="/js/app.min.js"></script> -->
     <!--   Boostrap JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
