insercao do avatar e bio do user

--- a/public/index.html
+++ b/public/index.html
@@ -43,8 +43,9 @@
     <main> 
       <section class="jumbotron text-center">
         <div class="container">
+          <img class="rounded-circle" src="https://avatars0.githubusercontent.com/u/6412038?s=200&v=4" alt="Generic placeholder image" width="140" height="140"></img>
           <h1 class="jumbotron-heading">Reactjs</h1>
-          <p class="lead text-muted">Bio</p>
+          <p class="lead text-muted">Quality code from the React community</p>
           <p>
             <a href="/" class="btn btn-secondary my-2">See Repositories</a>
           </p>
