remocao do select de ornedar repositorios, apos teste sem sucesso; ficara para a proxima versao

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
         <p class="float-right">
           <a href="#">Back to top</a>
         </p>
-        <p>Credit to GitHub API</p>
+        <p>Credit to <a target="_blank" href="https://developer.github.com/">GitHub API</a></p>
       </div>
     </footer>  
     <!--   jQuery -->
